JVM 옵션 설정 정규화
예전엔 execSync쓰면서 통으로 전달했었는데,
execFileSync쓰면서 변경할 필요가 있어졌다.
하나의 인자 안에 공백이 있을 경우 배열로 분리해줘야했음

- execSync에서 execFileSync로 실행 방식을 변경함에 따라 인자 전달 방식 수정 필요
- 하나의 인자 내에 공백이 포함된 JVM 옵션들을 올바르게 인식하도록 배열 분리(정규화) 처리 추가